3.6/oasis/getting-started.md
---
layout: default
description: Quick start guide on how to set up your first ArangoDB deployment in Oasis.
title: Getting Started with ArangoDB Oasis
---
# Getting Started with ArangoDB Oasis

The instructions below are a quick start guide on how to set up your first
ArangoDB deployment in Oasis. It covers everything from creating an account
to using the Oasis web interface to set up a test organization, project and
deployment, as well as accessing and deleting the deployment.

For general information about ArangoDB Oasis, see
[cloud.arangodb.com](https://cloud.arangodb.com/home?utm_source=docs&utm_medium=cluster_pages&utm_campaign=docs_traffic){:target="_blank"}.

A video series on how to get started with Oasis is also available:

{% include youtube-playlist.html id="PL0tn-TSss6NWH3DNyF96Zbz8LQ0OaFmvS" %}

## Prerequisites

Please have following information at hand for registration:

- An **email address**, required for email verification.

If you use a public email service provider (e.g. Hotmail), make sure to have
the following information at hand as well:

- A **mobile phone number**, required for SMS verification

{% hint 'info' %}
One mobile phone number will be associated with one account and cannot be
used for multiple accounts.
{% endhint %}

## How to create a new account

1. Go to [cloud.arangodb.com](https://cloud.arangodb.com/home?utm_source=docs&utm_medium=cluster_pages&utm_campaign=docs_traffic){:target="_blank"}.
2. Click the _Start Free_ button or click the _Sign Up_ link in the top
   right corner.
3. Review the terms & conditions and privacy policy and click _I accept_.
4. Select the type of sign up you would like to use (GitHub, Google, or
   email address).
    - For GitHub or Google please follow on-screen instructions.
    - For the email address option, type your desired email address in the
      email field and type a strong password in the password field.
    - Click the _Sign up_ button

   You will receive a verification email. In that mail, click the
   _Verify my email address_ link or button.
   It will open a page in ArangoDB Oasis that says _Welcome back!_
5. Click the _Log in_ button to continue and login.
6. If you signed up with an email address of a public email service provider (e.g. Hotmail),
   a form appears asking for your mobile phone number. Enter the country code
   and the number of the mobile phone you want to use for this account.
   For company email addresses, this step is skipped.
7. If you had to enter your phone number in the previous step, a verification
   code will be sent via SMS to the mobile number you entered. Enter the
   verification code.
8. A form will appear asking for your name. Enter your first, last and company
   name, and then press the _Save_ button.
9. An organization with a default project will now be prepared for you.
   Once that is completed, you will be redirected to the
   [ArangoDB Oasis dashboard](https://cloud.arangodb.com/dashboard){:target="_blank"}.

![Oasis Sign up](../images/oasis-signup.png)

## General hierarchy

ArangoDB Oasis supports multi-tenant setups via organizations.
You can create your own organization(s) and invite collaborators or join
existing ones via invites. Your organization contains projects.
Your projects hold your deployments.

- **Organizations**<br>
  represent (commercial) entities such as companies.
  You can be part of multiple organizations with a single user account.
  - **Projects**<br>
    represent organizational units such as teams or applications.
    - **Deployments**<br>
      the actual instances of ArangoDB clusters.

Also see the [Project Guide](./project-guide.html).

## Creating a new project

{% hint 'tip' %}
A default project is automatically created for you.
You can skip this paragraph unless you want to add additional projects.
{% endhint %}

1. In the main navigation, in the _Projects_ section, click the _Overview_ link.
2. Click the _New project_ button.
3. Enter a name and optional description for your new project.
4. Click the _Create_ button.
5. You will now be taken to the project summary page.

![Oasis New Project](../images/oasis-new-project.png)

Also see the video
[Projects with ArangoDB Oasis](https://www.youtube.com/watch?v=b7q-PdLEpug&list=PL0tn-TSss6NWH3DNyF96Zbz8LQ0OaFmvS&index=4&t=0s){:target="_blank"}.

## Creating a new deployment

1. If you don't have a project, yet, [create one first](#creating-a-new-project).
2. In the main navigation, in the _Projects_ section, click on the project for
   which you want to create a new deployment.
3. Navigate to the _Deployments_ tab. You will see an empty list or a list with
   your project's deployments.
4. Press the _New deployment_ button.

![Oasis Deployments](../images/oasis-deployments-page.png)

Also see the video
[Create a Deployment on ArangoDB Oasis](https://www.youtube.com/watch?v=yg2FfcNsKFc&list=PL0tn-TSss6NWH3DNyF96Zbz8LQ0OaFmvS&index=9&t=0s){:target="_blank"}.

### In the _General_ section

- Enter the name and optional short description for the deployment.

### In the _Location_ section

1. Select the _Provider_ and _Region_ of the provider.
2. Select the _DB Version_.
   **Note**: If you don't know which DB version to select, leave the version
   selected by default.
3. In the _CA Certificate_ field
    - The default certificate created for your project will automatically be selected.
    - If you have no default certificate, or want to use a new certificate
      create a new certificate by typing the desired name for it and hitting
      enter or clicking on the name when done.
    - Or, if you already have multiple certificates, select the desired one.
4. _Optional but strongly recommended:_ In the _IP allowlist_ field, select the
   desired one in case you want to limit access to your deployment to certain
   IP ranges. To create a allowlist, navigate to your project and select the
   _IP allowlists_ tab (also see the video
   [IP allowlists with ArangoDB Oasis](https://www.youtube.com/watch?v=Et6nlTHBI50&list=PL0tn-TSss6NWH3DNyF96Zbz8LQ0OaFmvS&index=6&t=0s){:target="_blank"}).

{% hint 'security' %}
For any kind of production deployment we strongly advise to use an IP allowlist.
{% endhint %}

![Oasis New Deployment](../images/oasis-new-deployment1.png)

### In the _Configuration_ section

Choose between a **OneShard** and **Sharded** deployment.

OneShard deployments are suitable when your data set fits in a single node.
They are ideal for graph use cases.

Sharded deployments are suitable when your data set is larger than a single node.
The data will be sharded across multiple nodes.

#### OneShard

1. Select the memory size of your node.
2. Select the CPU size of your node.
3. Select the disk size of your node. The available ranges for the disk size
   depend on the selected memory size.

![Oasis Deployment OneShard](../images/oasis-new-deployment2.png)

#### Sharded

- In addition to memory and disk size as in the OneShard configuration, select
  the number of nodes for your deployment. The more nodes you have, the higher
  the replication factor.

![Oasis Deployment Sharded](../images/oasis-new-deployment3-sharded.png)

- If you're unsure about the sharded setup, you can go through our wizard.
  Click on _Help me decide_ to open the recommendation process.

![Oasis Deployment Sharded](../images/oasis-new-deployment3-sharded-wizard.png)

- The wizard will guide you through a set of questions and display a
  recommendation.
- Click _Use recommendation_ to apply it to your sharded configuration.

### In the _Summary_ section

1. Review the configuration, and if you're ok with the setup press the
  _Create_ button.
2. You will be taken to the deployment overview page.
   **Note:** Your deployment is at that point being bootstrapped, this process
   will take a few minutes. Once it is ready, you will receive a confirmation email.

## Installing a new certificate

Certificates that do have the _Use well known certificate_ option enabled do
not need any installation and will be supported by almost all web-browsers
automatically.

Each certificate you create in ArangoDB Oasis that has the
_Use well known certificate_ option disabled, you will also need to install on
your local machine. This operation will slightly vary between operating systems.

1. In the main navigation, in the _Projects_ section, click on the project for
   which you want to install a new certificate.
2. Navigate to the _Certificates_ tab.

   ![Oasis Certificates](../images/oasis-cert-page-with-cert-present.png)

3. From the list of certificates, click on the one you want to install.
4. Navigate to the tab of the operating system of your choice.
5. Under _Installation instructions_, copy the commands by pressing the
   _Copy to clipboard_ button.

   ![Oasis Certificate Install Instructions](../images/oasis-cert-install-instructions.png)

6. Open a console on your local computer and run the commands that are provided.

Also see the video
[Certificates with ArangoDB Oasis](https://www.youtube.com/watch?v=TBU7TIvewV0&list=PL0tn-TSss6NWH3DNyF96Zbz8LQ0OaFmvS&index=5&t=0s){:target="_blank"}.

## Accessing your deployment

1. In the main navigation, in the _Projects_ section, click on the project for
   which you created a deployment earlier.
2. Navigate to the _Deployments_ tab.
3. For each deployment in your project, you see the status. While your new
   deployment is being set up, it will display the _bootstrapping_ status.
4. Press the _View_ button to show the deployment page.
5. When a deployment displays a status of _OK_, you can access it.
6. Click the copy icon next to the root password. This will copy the deployment
   root password to your clipboard. You can also click the view icon to unmask
   the root password to see it.
7. You will also receive an email that the deployment is available, with a URL
   to open it up.
8. Click on the _Open endpoint_ button or on the endpoint URL property to open
   the dashboard of your new ArangoDB deployment.
9. In the _username_ field type `root`, and in the _password_ field paste the
   password that you copied earlier.
10. Press the _Login_ button.
11. Press the _Select DB: \_system_ button

At this point your ArangoDB deployment is available for you to use — **Have fun!**

{% hint 'info' %}
Each deployment is accessible on two ports:

- Port 8529 is the standard port recommended for use by web-browsers.
- Port 18529 is the alternate port that is recommended for use by automated services.

The difference between these ports is the certificate used. If you enable
_Use well known certificate_, the certificates used on port 8529 is well known
and automatically accepted by most web browsers. The certificate used on port
18529 is a self-signed certificate. For securing automated services, the use of
a self-signed certificate is recommended.
{% endhint %}

## Deleting your deployment

{% hint 'warning' %}
This operation cannot be undone and **all deployment data will be lost**,
please proceed with caution.
{% endhint %}

1. In the main navigation, in the _Projects_ section, click on the project that
   holds the deployment you wish to delete.
2. Navigate to the _Deployments_ tab.
3. Click on the deployment you wish to delete.
4. Navigate to the _Danger zone_ tab.
5. Press the _Delete deployment_ button.
6. In the modal dialog, confirm the deletion by entering `Delete!` into the
   designated text field.
7. Start the deletion by pressing the _Yes_ button.
8. You will be taken back to the deployments page of the project.
   The deployment being deleted will display the _Deleting_ status until it has
   been successfully removed.

## Free-to-try vs. professional service

ArangoDB Oasis comes with a free-to-try plan that lets you test our ArangoDB
Cloud for free for 14 days. After the trial period, your deployments will
automatically be deleted.

You can convert to the professional service model at any time by adding 
your billing details and at least one payment method.

### Adding billing details

1. In the main navigation, in the _Organization_ section, click the _Overview_ link.
2. Navigate to the _Billing_ tab.
3. In the _Billing details_ section, click the _Edit_ button.
4. Enter your billing address and EU VAT identification number, if applicable.
5. Optionally, enter the email address(es) to which invoices should be emailed 
   automatically

![Oasis Billing Details](../images/oasis-billing-details.png)

### Adding a payment method

1. In the _Payment methods_ section, click the _Add_ button.
2. From the dropdown, select a payment type
   (currently, only credit card is supported).
3. Enter your credit card details in the form.
4. Click the _Save_ button.

![Oasis Payment Method](../images/oasis-add-payment-method-credit-card.png)

## Limitations of ArangoDB Oasis

ArangoDB Oasis aims to make all features of the ArangoDB Enterprise Edition
available to you, but there are a few limitations:

1. Encryption (both at rest & network traffic) is always on and cannot be
   disabled for security reasons.
2. Foxx services are not allowed to call out to the internet for security
   reasons. Incoming calls to Foxx services are fully supported.
3. LDAP authentication & Audit trails are currently unavailable, but will be
   supported in the near future.
